Transcorder変換処理の修正